--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+
 button:focus {
   outline: 0;
 }
@@ -67,7 +68,7 @@ ul {
   border-radius: 50%;
   display: none;
   transform: scale(0.6);
-  z-index: 2;
+  z-index: 4;
 }
 .btnWarp {
   text-align: center;
@@ -92,7 +93,7 @@ ul {
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 2;
+  z-index: 9;
   background: rgba(0, 0, 0, 0.5);
 }
 .win_txt {
@@ -104,7 +105,7 @@ ul {
   font-size: 20px;
   text-align: center;
   margin-bottom: 20px;
-  z-index: 3;
+  z-index: 10;
 }
 .win_btn {
   position: absolute;
@@ -115,5 +116,36 @@ ul {
   height: 30px;
   background: #ffffff;
   color: #333333;
+  z-index: 10;
+}
+.board_boundary{
+  position: absolute;
+  background:#CD8500;
   z-index: 3;
+}
+.left{
+  top:0;
+  left: 0;
+  width: 50%;
+  height: 102%;
+}
+.right {
+  right: 0;
+  top: 0;
+  width: 50%;
+  height: 102%;
+}
+.top  {
+  top: 0;
+  left: 50%;
+  width: 102%;
+  height: 50%;
+  transform: translateX(-50%);
+}
+.bottom{
+  bottom: 0;
+  left: 50%;
+  width: 102%;
+  height: 50%;
+  transform: translateX(-50%);
 }
